# TechTalkerSnacks

./: README.md  main.py  pyproject.toml
templates/: deposit.html  history.html  home.html  layout.html
